# itd-sdk

./: README.md  pyproject.toml
docs/: API_REFERENCE.md  README.md
src/itd_sdk/: __init__.py  _http.py  _normalizers.py  _utils.py  client.py  exceptions.py  models.py
tests/: test_client.py
